# ida-stdio-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  setting.toml
docs/: 能力矩阵.md
skills/ida-stdio-mcp/: SKILL.md
src/ida_stdio_mcp/: __init__.py  __main__.py  config.py  directory_analysis.py  errors.py  ida_bootstrap.py  ida_core.py  logging.py  main.py  managed_decompiler.py  models.py  profile_loader.py  prompts.py  result.py  runtime.py  runtime_workspace.py  schema_validation.py  service.py  session_manager.py  stdio_server.py  test_runner.py  tool_registry.py
src/ida_stdio_mcp/tools/: __init__.py  batch.py  bytes_tools.py  core.py  functions.py  strings.py  survey.py
tests/fixtures/: README.txt  crackme03.elf
tests/integration/: test_headless_tools.py  test_real_world_regressions.py  test_stdio_smoke.py
tests/unit/: test_batch_tool.py  test_directory_analysis.py  test_ida_bootstrap.py  test_logging.py  test_managed_decompiler.py  test_protocol.py
